--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <!-- App Header -->
+    <!-- Application Header -->
     <header class="app-header">
       <h1>My To-Do List</h1>
       <button id="add-task-btn" class="primary-btn">+ Add Task</button>
